force-app/main/default/objects/Staff__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
                <default>true</default>
                <label>Staff</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>