force-app/main/default/objects/Staff__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staffs</relationshipLabel>
    <relationshipName>Staffs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>