force-app/main/default/objects/Staff__c/fields/Staff_Type__c.field-meta.xml
<CustomField>
    <fullName>Staff_Type__c</fullName>
    <label>Staff Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Gardner</fullName>
            </value>
            <value>
                <fullName>Peon</fullName>
            </value>
            <value>
                <fullName>Security Guard</fullName>
            </value>
            <value>
                <fullName>Sweeper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>